<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#230140"
    tools:context=".ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/nasalizationrg"
            android:text="@string/finishedGame"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="35sp" />


    </LinearLayout>

    <TextView

        android:id="@+id/displayResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nasalizationrg"
        android:layout_marginBottom="40dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="21dp" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nasalizationrg"
        android:layout_gravity="center"
        android:onClick="restart"
        android:layout_marginBottom="20dp"
        android:text="@string/restartButton"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="21dp" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="13dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/nasalizationrg"
        android:text="@string/scores"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="35sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nasalizationrg"
        android:text="@string/top5"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/nasalizationrg"
            android:text="@string/pseudo"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <TextView
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nasalizationrg"
            android:text="@string/victory"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/nasalizationrg"
            android:text="@string/nulle"
            android:textAlignment="center"
            android:textSize="15sp"
            />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/nasalizationrg"
            android:text="@string/defeat"
            android:textAlignment="center"
            android:textSize="15sp"
            />

    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        >

    </ListView>


</LinearLayout>
