<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#230140"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:fontFamily="@font/nasalizationrg"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:text="@string/app_title"
        android:textColor="#FFFFFF"
        android:textSize="68dp"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/primary_color"
        android:fontFamily="@font/nasalizationrg"
        android:textColor="#FFFFFF"
        android:text="@string/button_one"
        android:textSize="25dp"
        android:layout_marginTop="220dp"
        android:onClick="DraftMode"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:background="@color/primary_color"
        android:fontFamily="@font/nasalizationrg"
        android:gravity="center"
        android:text="@string/button_two"
        android:textColor="#FFFFFF"
        android:textSize="25dp"
        android:onClick="CustomGame"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:background="@color/primary_color"
        android:fontFamily="@font/nasalizationrg"
        android:gravity="center"
        android:onClick="SoloIngameMode"
        android:text="@string/button_three"
        android:textColor="#FFFFFF"
        android:textSize="25dp"

        />


</RelativeLayout>