<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#230140"
    tools:context=".ChooseDifficultyActivity">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="354dp"
        android:layout_height="145dp"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/nasalizationrg"
        android:text="@string/chooseDifficulty"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="359dp"
        android:layout_height="60dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/nasalizationrg"
        android:onClick="randomComputerGame"
        android:text="@string/randomDiff"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <Button
        android:id="@+id/button7"
        android:layout_width="359dp"
        android:layout_height="60dp"
        android:layout_marginTop="180dp"
        android:fontFamily="@font/nasalizationrg"
        android:onClick="unbeatableComputerGame"
        android:text="@string/unbeatableDiff"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

</androidx.constraintlayout.widget.ConstraintLayout>
