<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#230140"
    tools:context=".DraftActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="411dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="37dp"
                android:fontFamily="@font/nasalizationrg"
                android:text="@string/playerOne"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="27dp"
                android:fontFamily="@font/nasalizationrg"
                android:text="@string/pseudo"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/pseudo1"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@color/primary_color"
                android:fontFamily="@font/nasalizationrg"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="27dp"
                android:fontFamily="@font/nasalizationrg"
                android:text="@string/Image"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:layout_marginTop="23dp"
                android:background="@color/primary_color"
                android:fontFamily="@font/nasalizationrg"
                android:onClick="takeFirstUserPicture"
                android:text="@string/addPicture"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="23dp"
                tools:srcCompat="@tools:sample/avatars" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:layout_marginLeft="75dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="585dp"
        android:gravity="center"
        android:text="@string/jouer"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/nasalizationrg"
        android:onClick="startGame"

        />

</RelativeLayout>